2008-04-26  Per Bothner  <per@bothner.com>

	* SwitchState.java (addCase): Use unsigned shift to avoid
	potential overflow error in binary search.

2008-04-24  Per Bothner  <per@bothner.com>

	* CodeAttr.java (processFixups): Drop redundant line number entries.

2008-04-08  Elliott Hughes <enh@jessies.org>
	    Per Bothner  <per@bothner.com>

	* package.html: Add example, plus sme other tweaks.
	* dump.java: Add more javadoc.

2008-04-08  Per Bothner  <per@bothner.com>

	* Access.java: Various new constants.  Explicit support for
	acess flags in InnerClasses attribute.
	* InnerClassesAttr.java (print): Pass Access.INNERCLASS_CONTEXT.

	* ClassType.java: Now also implement Member.
	(getStaticFlag): New method, needed to implement Member.
	(enclosingMember): New field.
	(getDeclaringClass, getEnclosingMember, setEnclosingMember,
	addEnclosingMember, addMethod, addMode): New methods.
	* ObjectType.java (ADD_ENCLOSING_DONE): Add flag.

	* Access.java (CLASS_CONTEXT, INNERCLASS_CONTEXT, FIELD_CONTEXT,
	METHOD_CONTEXT, INNERCLASS_MODIFIERS): New constants.

2008-03-01  Per Bothner  <per@bothner.com>

	* EnclosingMethodAttr.java: New extends, extends Attribute.
	* Makefile.am: Update accordingly.
	* ClassFileInput.java (readAttribute): Recognize EnclosingMethod
	attribute.

2008-02-28  Per Bothner  <per@bothner.com>

	* ClassTypeWriter.java (printOptionalIndex): Print '#' first.

2007-11-04  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java: Revert following the Java2 delegation model.
	Give the current ClassLoader priority over ancestor ClassLoaders.
	(loadClass): New methods.
	(findClass): Remove method.

2007-11-02  Per Bothner  <per@bothner.com>

	* ObjectType.java (getField, getMethod, getMethods): New methods.
	* PrimType.java (compare): If other is non-ClassType non-ArrayType
	defer to other (perhaps a LangObjType).

2007-04-01  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java (getContextPackage): New static method.
