@@ -2696,31 +2696,24 @@ public class Compilation implements SourceLocator
   /** If non-null, a helper method generated by getForNameHelper. */
   Method forNameHelper;
 
-  public void loadClassRef (ClassType clas)
+  /** Generate code to load a named Class without initializing it.
+   */
+  public void loadClassRef (ObjectType clas)
   {
+    CodeAttr code = getCode();
     // Try an optimization
     if (clas == mainClass && mainLambda.isStatic()
         // moduleInstanceMainField may not have been set yet.
         && moduleInstanceMainField != null)
       {
-        CodeAttr code = getCode();
         code.emitGetStatic(moduleInstanceMainField);
         code.emitInvokeVirtual(Type.pointer_type.getDeclaredMethod("getClass", 0));
       }
-    else
-      loadClassRef(clas.getName());
-  }
-
-  /** Generate code to load a named Class without initializing it.
-   */
-  public void loadClassRef (String className)
-  {
-    CodeAttr code = getCode();
-    if (curClass.getClassfileMajorVersion() >= 49) // Java5 feature
-      code.emitPushClass(className);
+    else if (curClass.getClassfileMajorVersion() >= 49) // Java5 feature
+      code.emitPushClass(clas);
     else
       {
-        code.emitPushString(className);
+        code.emitPushString(clas.getInternalName());
         code.emitInvokeStatic(getForNameHelper());
       }
   }
