@@ -1,5 +1,9 @@
 2008-04-26  Per Bothner  <per@bothner.com>
 
+	* CodeAttr.java (emitPushClass(ObjectType)): New method.
+
+	* CodeAttr.java (emitCheckcast): Generalize to allow ObjectType.
+
 	* SwitchState.java (addCase): Use unsigned shift to avoid
 	potential overflow error in binary search.
 
